# SW_Diploma_files

00_Projects/01_1_Optional_First/ConfigurableProcessor/: ConfigurableProcessor  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md
00_Projects/01_1_Optional_First/ConfigurableProcessor/config/: settings.txt
00_Projects/01_1_Optional_First/ConfigurableProcessor/include/: Configuration.hpp  Processor.hpp  ProcessorFactory.hpp  Utilities.hpp
00_Projects/01_1_Optional_First/ConfigurableProcessor/src/: Configuration.cpp  Processor.cpp  ProcessorFactory.cpp  Utilities.cpp  main.cpp
00_Projects/01_2_Optional_Second/GenericNumericType/: Makefile  README.md  main.cpp
00_Projects/01_2_Optional_Second/GenericNumericType/include/: Numeric.h  NumericChar.h  NumericComplex.h  NumericDouble.h  NumericFloat.h  NumericInt.h
00_Projects/01_2_Optional_Second/GenericNumericType/src/: NumericChar.cpp  NumericComplex.cpp  NumericDouble.cpp  NumericFloat.cpp  NumericInt.cpp
00_Projects/01_First/Sudoku/: CMakeLists.txt  SudokuAdvancedChecks.cpp  SudokuAdvancedChecks.hpp  SudokuBoard.cpp  SudokuBoard.hpp  SudokuCell.cpp  SudokuCell.h  SudokuGame.cpp  SudokuGame.hpp  SudokuGenerator.cpp  SudokuGenerator.hpp  SudokuSolver.cpp  SudokuSolver.hpp  SudokuWindow.cpp  SudokuWindow.h  main.cpp  sudoku.cpp  sudoku.h  sudoku.ui
00_Projects/01_First/files/: CMakeLists.txt  IO_Samples.md
class_template_idea/: main.cpp
modern_task/: a.out  main.cpp
predicates_task/: a.out  main.cpp
rlvalue_task/: a.out  main.cpp
template_task/: a.out  main.cpp
